force-app/main/default/objects/Taxonomy_Metadata__c/Taxonomy_Metadata__c.object-meta.xml
<CustomObject>
    <description>Hierarchical metadata / reference information used for classification; e.g.:
&gt; Case categorisation
&gt; Locations
&gt; Reporting hieararchical structures</description>
    <label>Meta Categorisation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Categorisations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>