force-app/main/default/objects/Taxonomy_Metadata__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCF</fullName>
            </value>
            <value>
                <fullName>NSW Trains</fullName>
            </value>
            <value>
                <fullName>RMS</fullName>
            </value>
            <value>
                <fullName>Serco</fullName>
            </value>
            <value>
                <fullName>SNSW</fullName>
            </value>
            <value>
                <fullName>STA</fullName>
            </value>
            <value>
                <fullName>Sydney Trains</fullName>
            </value>
            <value>
                <fullName>TfNSW</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>PBO</fullName>
            </value>
            <value>
                <fullName>Newcastle Transport</fullName>
            </value>
            <value>
                <fullName>LRO</fullName>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>