force-app/main/default/objects/Taxonomy_Metadata__c/fields/Auto_Share_With_SNSW__c.field-meta.xml
<CustomField>
    <fullName>Auto_Share_With_SNSW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Responsible Party of the case will be updated to SNSW. and case will eventually be auto-shared with SNSW</description>
    <label>Auto Share With SNSW</label>
    <type>Checkbox</type>
</CustomField>