force-app/main/default/objects/Taxonomy_Metadata__c/fields/Cluster_Driver__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Driver__c</fullName>
    <label>Cluster Driver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>