force-app/main/default/objects/Taxonomy_Metadata__c/fields/Customer_facing_sort_order__c.field-meta.xml
<CustomField>
    <fullName>Customer_facing_sort_order__c</fullName>
    <label>Customer facing sort order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>