force-app/main/default/objects/Taxonomy_Metadata__c/fields/Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value__c</fullName>
    <description>Allows the customer facing value to be different from the internal / staff-facing taxonomy value</description>
    <inlineHelpText>Defines the value that customers can select if this taxonomy item is visible in customer-facing channels (i.e. on the web).</inlineHelpText>
    <label>Customer Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>