force-app/main/default/objects/Taxonomy_Metadata__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access &amp; Convenience</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Safety &amp; Security</fullName>
            </value>
            <value>
                <fullName>Ticketing</fullName>
            </value>
            <value>
                <fullName>Timeliness</fullName>
            </value>
            <value>
                <fullName>Timetables</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Staff/Customer Service</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Licensing &amp; Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>