force-app/main/default/objects/Taxonomy_Metadata__c/fields/FullCustName__c.field-meta.xml
<CustomField>
    <fullName>FullCustName__c</fullName>
    <description>The full customer-facing name (with hierarchy) for this Taxonomy record.</description>
    <formula>IF(ISBLANK( ParentLevel0CustName__c ),&quot;&quot;, &quot;[&quot;&amp;ParentLevel0CustName__c&amp;&quot;]&quot;)&amp;IF(ISBLANK( ParentLevel1CustName__c ),&quot;&quot;, &quot;.[&quot;&amp;ParentLevel1CustName__c&amp;&quot;]&quot;)&amp;IF(ISBLANK( ParentLevel2CustName__c ),&quot;&quot;, &quot;.[&quot;&amp;ParentLevel2CustName__c&amp;&quot;]&quot;)&amp; IF(OR(ISBLANK( ParentLevel0CustName__c ), ISBLANK( Customer_Value__c )),&quot;&quot;, &quot;.&quot;)&amp; IF(ISBLANK( Customer_Value__c ),&quot;&quot;, &quot;[&quot;&amp;Customer_Value__c&amp;&quot;]&quot;)</formula>
    <label>FullCustName</label>
    <type>Text</type>
</CustomField>