force-app/main/default/objects/Taxonomy_Metadata__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>The full name (with hierarchy) for this Taxonomy record.</description>
    <formula>IF(ISBLANK( ParentLevel0Name__c ),&quot;&quot;, &quot;[&quot;&amp;ParentLevel0Name__c&amp;&quot;]&quot;)&amp;IF(ISBLANK( ParentLevel1Name__c ),&quot;&quot;, &quot;.[&quot;&amp;ParentLevel1Name__c&amp;&quot;]&quot;)&amp;IF(ISBLANK( ParentLevel2Name__c ),&quot;&quot;, &quot;.[&quot;&amp;ParentLevel2Name__c&amp;&quot;]&quot;)&amp; IF(OR(ISBLANK( ParentLevel0Name__c ), ISBLANK( Name )),&quot;&quot;, &quot;.&quot;)&amp; IF(ISBLANK( Name ),&quot;&quot;, &quot;[&quot;&amp;Name&amp;&quot;]&quot;)</formula>
    <label>FullName</label>
    <type>Text</type>
</CustomField>