force-app/main/default/objects/Taxonomy_Metadata__c/fields/Hide_Non_Modal_Webform__c.field-meta.xml
<CustomField>
    <fullName>Hide_Non_Modal_Webform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFCOE-2369 - Hide this taxonomy on non-modal webform</description>
    <inlineHelpText>If this taxonomy is selected as Inactive, this taxonomy will be hidden from the non-modal webform.</inlineHelpText>
    <label>Hide - Non Modal Webform</label>
    <type>Checkbox</type>
</CustomField>