force-app/main/default/objects/Taxonomy_Metadata__c/fields/Hide_Passes__c.field-meta.xml
<CustomField>
    <fullName>Hide_Passes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFCOE-2369 - Hide this taxonomy on non-modal webform</description>
    <inlineHelpText>If this taxonomy is selected as Inactive, this taxonomy will be hidden from the Tickets and Fares Webform.</inlineHelpText>
    <label>Hide - Tickets and Fares Webform</label>
    <type>Checkbox</type>
</CustomField>