force-app/main/default/objects/Taxonomy_Metadata__c/fields/Important_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Information__c</fullName>
    <description>keeps important information about the Taxonomy, incl. dependencies, business rules, etc</description>
    <inlineHelpText>Important information about this Taxonomy, incl. dependencies, business rules, etc</inlineHelpText>
    <label>Important Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>