force-app/main/default/objects/Taxonomy_Metadata__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Indicate if the Taxonomy record is active. This formula follows the opposite logic  from &quot;Is Inactive&quot;. If the logic regarding &quot;Active&quot; or &quot;Inactive&quot; has changed, make sure to only update the formula in &quot;Is Inactive&quot;.</description>
    <formula>IF( Is_Inactive__c ,FALSE,TRUE)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>