force-app/main/default/objects/Taxonomy_Metadata__c/fields/Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Inactive__c</fullName>
    <description>This field indicates if the Taxonomy record is inactive or not. The record is inactive if all Statuses = Inactive.</description>
    <formula>IF(OR(TEXT(Status_Customer_Facing__c) = &quot;Active&quot;, TEXT(Status_NSWT_Customer_Facing__c) = &quot;Active&quot;, TEXT(Status_Staff_Facing__c)=&quot;Active&quot;,TEXT(Status_ST_Customer_Facing__c) = &quot;Active&quot;), FALSE, TRUE)</formula>
    <inlineHelpText>The record is inactive if all statuses are inactive.</inlineHelpText>
    <label>Is Inactive</label>
    <type>Checkbox</type>
</CustomField>