force-app/main/default/objects/Taxonomy_Metadata__c/fields/IsMinCorro__c.field-meta.xml
<CustomField>
    <fullName>IsMinCorro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Corro</label>
    <type>Checkbox</type>
</CustomField>