force-app/main/default/objects/Taxonomy_Metadata__c/fields/Issue_Accountability__c.field-meta.xml
<CustomField>
    <fullName>Issue_Accountability__c</fullName>
    <inlineHelpText>Defines which area is accountable for case management when this taxonomy item is selected (where case management can be determined purely by case category or location alone)</inlineHelpText>
    <label>Issue Accountability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer Liaison Team</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>IDD Pacific Highway</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Maritime Boating Operations</fullName>
            </value>
            <value>
                <fullName>Maritime Statewide Coordination</fullName>
            </value>
            <value>
                <fullName>Road Maintenance</fullName>
            </value>
            <value>
                <fullName>SEG Government Information Services</fullName>
            </value>
            <value>
                <fullName>SNSW</fullName>
            </value>
            <value>
                <fullName>Speed Limits and Cameras</fullName>
            </value>
            <value>
                <fullName>Traffic Management &amp; Safety</fullName>
            </value>
            <value>
                <fullName>JMD - TOLLING</fullName>
            </value>
            <value>
                <fullName>Road rules</fullName>
            </value>
            <value>
                <fullName>IDD - CONTRACTS &amp; PROJECT STRATEGY</fullName>
            </value>
            <value>
                <fullName>IDD - Greater Sydney Program Office</fullName>
            </value>
            <value>
                <fullName>IDD - Freight &amp; Regional Program Office</fullName>
            </value>
            <value>
                <fullName>IDD - Commercial</fullName>
            </value>
            <value>
                <fullName>IDD - Pacific Highway Program Office</fullName>
            </value>
            <value>
                <fullName>IDD - Western Sydney Program Office</fullName>
            </value>
            <value>
                <fullName>RMS - CEP - Govt Information Services</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Sydney or Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>