force-app/main/default/objects/Taxonomy_Metadata__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Internal Matters</fullName>
            </value>
            <value>
                <fullName>OTR</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Ticketing</fullName>
            </value>
            <value>
                <fullName>Timetable</fullName>
            </value>
            <value>
                <fullName>Not Categorised</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>