force-app/main/default/objects/Taxonomy_Metadata__c/fields/KPI_Metro_PBO__c.field-meta.xml
<CustomField>
    <fullName>KPI_Metro_PBO__c</fullName>
    <label>KPI - Metro PBO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>