force-app/main/default/objects/Taxonomy_Metadata__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Modified</label>
    <type>Checkbox</type>
</CustomField>