force-app/main/default/objects/Taxonomy_Metadata__c/fields/Level_0__c.field-meta.xml
<CustomField>
    <fullName>Level_0__c</fullName>
    <description>Hyperlink to the level 0 Taxonomy for this record.</description>
    <formula>IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__r.Parent_Id__c)), HYPERLINK(&quot;/&quot;+ Parent_Id__r.Parent_Id__r.Parent_Id__r.Id,Parent_Id__r.Parent_Id__r.Parent_Id__r.Name), IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__c)), HYPERLINK(&quot;/&quot;+ Parent_Id__r.Parent_Id__r.Id,Parent_Id__r.Parent_Id__r.Name), IF (NOT(ISBLANK( Parent_Id__c)), HYPERLINK(&quot;/&quot;+ Parent_Id__r.Id,Parent_Id__r.Name), &quot;&quot;)))</formula>
    <label>Level 0</label>
    <type>Text</type>
</CustomField>