force-app/main/default/objects/Taxonomy_Metadata__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>The hierarchy level of this Taxonomy record. The level starts from 0 to 3.</description>
    <formula>IF(ISBLANK(  Parent_Id__c  ), &quot;Level 0&quot;,IF(ISBLANK(   Parent_Id__r.Parent_Id__c   ),&quot;Level 1&quot;, IF(ISBLANK(Parent_Id__r.Parent_Id__r.Parent_Id__c   ),&quot;Level 2&quot;, &quot;Level 3&quot;)))</formula>
    <label>Level</label>
    <type>Text</type>
</CustomField>