force-app/main/default/objects/Taxonomy_Metadata__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <valueField>Taxonomy_Metadata__c.Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Taxonomy_Metadata__c.Type__c</field>
            <operation>equals</operation>
            <value>Mode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Taxonomy_Metadata__c</referenceTo>
    <relationshipLabel>Meta Categorisations</relationshipLabel>
    <relationshipName>Child_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>