force-app/main/default/objects/Taxonomy_Metadata__c/fields/Parent_record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_record_Id__c</fullName>
    <formula>(Parent_Id__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent record Id</label>
    <type>Text</type>
</CustomField>