force-app/main/default/objects/Taxonomy_Metadata__c/fields/ParentLevel0CustName__c.field-meta.xml
<CustomField>
    <fullName>ParentLevel0CustName__c</fullName>
    <description>The customer-facing name of level 0 parent for this Taxonomy record.</description>
    <formula>IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__r.Parent_Id__c)), Parent_Id__r.Parent_Id__r.Parent_Id__r.Customer_Value__c , IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__c)), Parent_Id__r.Parent_Id__r.Customer_Value__c, IF (NOT(ISBLANK( Parent_Id__c)), Parent_Id__r.Customer_Value__c, &quot;&quot;)))</formula>
    <label>ParentLevel0CustName</label>
    <type>Text</type>
</CustomField>