force-app/main/default/objects/Taxonomy_Metadata__c/fields/ParentLevel0Name__c.field-meta.xml
<CustomField>
    <fullName>ParentLevel0Name__c</fullName>
    <description>The name of level 0 parent for this Taxonomy record.</description>
    <formula>IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__r.Parent_Id__c)), Parent_Id__r.Parent_Id__r.Parent_Id__r.Name, IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__c)), Parent_Id__r.Parent_Id__r.Name, IF (NOT(ISBLANK( Parent_Id__c)), Parent_Id__r.Name, &quot;&quot;)))</formula>
    <label>ParentLevel0Name</label>
    <type>Text</type>
</CustomField>