force-app/main/default/objects/Taxonomy_Metadata__c/fields/ParentLevel1CustName__c.field-meta.xml
<CustomField>
    <fullName>ParentLevel1CustName__c</fullName>
    <description>The customer-facing name of level 1 parent for this Taxonomy record.</description>
    <formula>IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__r.Parent_Id__c)), Parent_Id__r.Parent_Id__r.Customer_Value__c, IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__c)), Parent_Id__r.Customer_Value__c,  &quot;&quot;))</formula>
    <label>ParentLevel1CustName</label>
    <type>Text</type>
</CustomField>