force-app/main/default/objects/Taxonomy_Metadata__c/fields/ParentLevel2Name__c.field-meta.xml
<CustomField>
    <fullName>ParentLevel2Name__c</fullName>
    <description>The name of level 2 parent for this Taxonomy record.</description>
    <formula>IF (NOT(ISBLANK( Parent_Id__r.Parent_Id__r.Parent_Id__c)), Parent_Id__r.Name, &quot;&quot;)</formula>
    <label>ParentLevel2Name</label>
    <type>Text</type>
</CustomField>