force-app/main/default/objects/Taxonomy_Metadata__c/fields/Route_Description__c.field-meta.xml
<CustomField>
    <fullName>Route_Description__c</fullName>
    <label>Route Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>