force-app/main/default/objects/Taxonomy_Metadata__c/fields/Route_Variant_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Variant_Type__c</fullName>
    <label>Route Variant Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>