force-app/main/default/objects/Taxonomy_Metadata__c/fields/Staff_facing_sort_order__c.field-meta.xml
<CustomField>
    <fullName>Staff_facing_sort_order__c</fullName>
    <label>Staff facing sort order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>