force-app/main/default/objects/Taxonomy_Metadata__c/fields/Status_ST_Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>Status_ST_Customer_Facing__c</fullName>
    <label>Status - ST Customer Facing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>