force-app/main/default/objects/Taxonomy_Metadata__c/fields/Status_Staff_Facing__c.field-meta.xml
<CustomField>
    <fullName>Status_Staff_Facing__c</fullName>
    <inlineHelpText>Identifies whether this value is available (active) for selection in staff-facing channels</inlineHelpText>
    <label>Status - Staff Facing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>