force-app/main/default/objects/Taxonomy_Metadata__c/fields/Taxonomy_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_ID_18_digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxonomy ID (18 digits)</label>
    <type>Text</type>
</CustomField>