force-app/main/default/objects/Taxonomy_Metadata__c/fields/Visible_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>used for TfNSW Operator Portal</inlineHelpText>
    <label>Visible in Portal</label>
    <type>Checkbox</type>
</CustomField>