force-app/main/default/objects/Taxonomy_Metadata__c/validationRules/Customer_Facing_Has_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Facing_Has_Value</fullName>
    <active>true</active>
    <description>Ensures that any taxonomy items marked as customer facing have a customer facing value specified</description>
    <errorConditionFormula>ISPICKVAL(Status_Customer_Facing__c,&#39;Active&#39;) &amp;&amp;  ISBLANK(Customer_Value__c)</errorConditionFormula>
    <errorDisplayField>Customer_Value__c</errorDisplayField>
    <errorMessage>A customer facing value must be specified when the taxonomy item is marked as &#39;Active&#39; for customer facing channels.</errorMessage>
</ValidationRule>