force-app/main/default/objects/Taxonomy_Metadata__c/validationRules/Parent_cannot_be_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_cannot_be_inactive</fullName>
    <active>true</active>
    <description>Active Taxonomy cannot have inactive parent</description>
    <errorConditionFormula>AND( Is_Active__c , Has_Inactive_Parent__c )</errorConditionFormula>
    <errorMessage>Active Taxonomy cannot have inactive parent, activate parent Taxonomy first.</errorMessage>
</ValidationRule>