force-app/main/default/objects/Taxonomy_Metadata__c/listViews/Agencies.listView-meta.xml
<ListView>
    <fullName>Agencies</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Agency Hierarchy</value>
    </filters>
    <label>Agencies</label>
</ListView>