force-app/main/default/objects/Taxonomy_Metadata__c/listViews/Agencies_STA_Parent.listView-meta.xml
<ListView>
    <fullName>Agencies_STA_Parent</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Agency Hierarchy</value>
    </filters>
    <filters>
        <field>Parent_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>Agencies - STA Parent</label>
</ListView>