force-app/main/default/objects/Taxonomy_Metadata__c/listViews/All_Agency_Hierarchy.listView-meta.xml
<ListView>
    <fullName>All_Agency_Hierarchy</fullName>
    <columns>NAME</columns>
    <columns>KPI__c</columns>
    <columns>Type__c</columns>
    <columns>Driver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Agency Hierarchy</value>
    </filters>
    <label>All Agency Hierarchy</label>
</ListView>