force-app/main/default/objects/Taxonomy_Metadata__c/listViews/All_Level_1.listView-meta.xml
<ListView>
    <fullName>All_Level_1</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>KPI__c</columns>
    <columns>Type__c</columns>
    <columns>Driver__c</columns>
    <columns>Customer_Value__c</columns>
    <columns>Issue_Accountability__c</columns>
    <columns>Status_Customer_Facing__c</columns>
    <columns>Status_NSWT_Customer_Facing__c</columns>
    <columns>Status_Staff_Facing__c</columns>
    <columns>Status_ST_Customer_Facing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Level 1</label>
</ListView>