force-app/main/default/objects/Taxonomy_Metadata__c/listViews/All_Level_3_Taxonomy.listView-meta.xml
<ListView>
    <fullName>All_Level_3_Taxonomy</fullName>
    <columns>NAME</columns>
    <columns>KPI__c</columns>
    <columns>Type__c</columns>
    <columns>Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Level 3 Taxonomy</label>
</ListView>