force-app/main/default/objects/Taxonomy_Metadata__c/listViews/All_MAGS.listView-meta.xml
<ListView>
    <fullName>All_MAGS</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>KPI__c</columns>
    <columns>Type__c</columns>
    <columns>Driver__c</columns>
    <columns>Customer_Value__c</columns>
    <columns>Status_Customer_Facing__c</columns>
    <columns>Status_NSWT_Customer_Facing__c</columns>
    <columns>Status_Staff_Facing__c</columns>
    <columns>Status_ST_Customer_Facing__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>John Vu</value>
    </filters>
    <label>All - MAGS</label>
</ListView>