force-app/main/default/objects/Taxonomy_Metadata__c/listViews/Bus_Category_All.listView-meta.xml
<ListView>
    <fullName>Bus_Category_All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Case Categorisation</value>
    </filters>
    <label>Bus Category - All</label>
</ListView>